# grok-build-enhanced

./: .gitignore  AGENTS.md  README.md  THIRD-PARTY-NOTICES  UPSTREAM_VERSIONS.md  install.sh
.github/workflows/: fork-contracts.yml  release.yml
.grok/skills/refresh-upstreams/: SKILL.md
crates/codegen/xai-chat-state/: Cargo.toml
crates/codegen/xai-grok-agent/: Cargo.toml
crates/codegen/xai-grok-config/: Cargo.toml
crates/codegen/xai-grok-pager/: Cargo.toml  build.rs
crates/codegen/xai-grok-pager-minimal/: Cargo.toml
crates/codegen/xai-grok-pager-render/: Cargo.toml  THIRD_PARTY_NOTICES.md  build.rs
crates/codegen/xai-grok-provider-http/: Cargo.toml  THIRD_PARTY_NOTICES.md
crates/codegen/xai-grok-provider-http/src/: lib.rs  outbound_proxy.rs
crates/codegen/xai-grok-provider-http/src/outbound_proxy/: macos.rs  windows.rs
crates/codegen/xai-grok-sampler/: Cargo.toml  THIRD_PARTY_NOTICES.md
crates/codegen/xai-workflow/: Cargo.toml
docs/: upstream-refresh-2026-07-19.md  upstream-refresh-2026-07-20.md  upstream-refresh-2026-07-21-r2.md  upstream-refresh-2026-07-21-r3.md  upstream-refresh-2026-07-21.md
docs/providers/: README.md  kimi-code-integration-research.md  openai-codex-subscription-provider-reference.md  zai-glm-coding-plan-integration-research.md
fork/: README.md  manifest.json
fork/contracts/: openai_codex_search_contract.json
fork/scripts/: check_fork_contracts.py  check_manifest.py  check_openai_codex_search_contract.py  vendor_warp_themes.py  verify_patch_stack.sh
scripts/release/: package_asset.sh  release_contract.py
(+582 files in other folders)
