[package]
license = "Apache-2.0"
name = "xai-grok-provider-http"
version = "0.1.0"
edition.workspace = true
description = "Provider-scoped outbound HTTP routing with redacted system-proxy resolution."

[dependencies]
http = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
    "Win32_System_Memory",
] }

[lints]
workspace = true
