[package]
license = "Apache-2.0"
name = "xai-workflow"
version = "0.1.0"
edition.workspace = true
description = "Rhai-scripted dynamic workflow engine: scripts orchestrate agents through a host channel"

[dependencies]
rhai = { version = "1.25", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
